tests/errors/3_definition_errors/undefined-variable-5.java
class Main {
	static int a;
    static int run() {
        return b; // returning undeclared variable
    }
}
